serverFiles/logs/compile/2.txt
./serverFiles/read-fail.c: In function ‘main’:
./serverFiles/read-fail.c:11:2: error: expected declaration or statement at end of input
  printf("Hello World\n");
  ^~~~~~
